# Chatbot_Mvp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHECKLIST.md  CODE_REVIEW_CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED_CN.md  LANGSMITH_GUIDE.md  LICENSE  LOGGING_GUIDE.md  LOGGING_IMPROVEMENTS.md  Makefile  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.githooks/: pre-commit  pre-commit.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
chroma_db/: chroma.sqlite3
docs/: DEPLOYMENT.md  ENGINEERING.md  QUICKSTART.md
examples/: README.md  demo.py  example_usage.py
scripts/: download_model.py  init_git.bat  init_git.sh  setup.bat  setup.ps1  setup.sh  setup_hooks.bat  setup_hooks.sh
src/: __init__.py  chat_agent.py  config.py  document_processor.py  main.py  upload_document.py  vector_store.py
src/agent/: __init__.py  graph.py  nodes.py  state.py
src/document_processor/: __init__.py  loader.py  splitter.py  vectorizer.py
src/retrieval/: __init__.py  retriever.py  vector_store.py
src/utils/: logger.py
tests/: test_config.py  test_document_processor.py  test_retrieval.py
