[project]
name = "chatbot-mvp"
version = "0.1.0"
description = "基于 LangGraph 和 LangChain 的 RAG 聊天机器人"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.20",
    "langsmith>=0.0.80",
    "chromadb>=0.4.22",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
    "sentence-transformers>=2.3.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
